May 08 2012 <shlomif@shlomifish.org> (Shlomi Fish)

  Error.pm #0.17018
  - Add a $VERSION variable for Error::Simple.
    - thanks to Kevin Dawson for the report.
  - Add scripts/bump-version-number.pl .
    - This can be used to bump the version numbers globally.

Feb 11 2012 <shlomif@shlomifish.org> (Shlomi Fish)

  - Bleadperl broke Error.pm's tests - 
  	- https://rt.cpan.org/Ticket/Display.html?id=74770
    - Applied a patch to check for optional trailing periods.
	- Thanks to ANDK for the report and RURBAN for the patch
  
Dec 19 2009 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17016
  - Mentioned the lack of compatibility of "use Error qw(:try)" with Moose.
    Fixed: https://rt.cpan.org/Ticket/Display.html?id=46364
  - Added TryCatch and Try::Tiny to the "SEE ALSO".
  - Add the WARNING that this module is no longer recommended.

Jul 19 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17015
  - Added the "SEE ALSO" section to the Error.pm POD mentioning
  Exception::Class and Error::Exception.

May 24 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17014
  - Made Makefile.PL require perl-5.6.0 and above.

May 22 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17013
  - Now building only on perl-5.6.0 and above.
    - Added the line to the Build.PL

Jan 25 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17012
  - Added some examples to the examples/ directory.
  - Applied the patch from hchbaw to fix:
    -//rt.cpan.org/Public/Bug/Display.html?id=32638
    - Thanks to hchbaw

Dec 25 2007 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17011
  - added 'warnings' to the dependencies in the Build.PL/Makefile.PL as
    we are using it.
  - changed the author in Makefile.PL/Build.PL from GBARR to SHLOMIF:
    - http://rt.cpan.org/Public/Bug/Display.html?id=31861
    - Thanks to Michael Schwern
  - added an empty line between the "__END__" and "=head1" in
  lib/Error/Simple.pm for more pedantic POD parsers.
