@@ -8,7 +8,8 @@ use Test::Run::Builder;
 
 my $build = Test::Run::Builder->new(
     'module_name' => "Error",
-    'requires'    => 
+    configure_requires => { 'Module::Build' => '0.39', },
+    'requires'    =>
     {
         'Scalar::Util' => 0,
         'perl' => "5.6.0",
@@ -16,6 +17,6 @@ my $build = Test::Run::Builder->new(
     },
     'license'  => "perl",
     'dist_abstract' => 'Error/exception handling in an OO-ish way',
-    'dist_author'   => 'Shlomi Fish <shlomif@iglu.org.il>',
+    'dist_author'   => 'Shlomi Fish ( http://www.shlomifish.org/ )',
 );
 $build->create_build_script;
