@@ -1,3 +1,11 @@
+Nov 19 2012 <shlomif@shlomifish.org> (Shlomi Fish)
+
+  Error.pm #0.17019
+  - Change to Shlomi Fish's new E-mail and web address.
+  - Clarify the licence of lib/Error/Simple.pm .
+    - https://rt.cpan.org/Ticket/Display.html?id=81277
+    - Thanks to Marcela
+
 May 08 2012 <shlomif@shlomifish.org> (Shlomi Fish)
 
   Error.pm #0.17018
